--- a/templates/assets/static/carro/editar.html
+++ b/templates/assets/static/carro/editar.html
@@ -11,6 +11,11 @@
     <a href="{% url 'detalhes_automovel' ID  %}" class="btn btn-secondary">Cancelar</a>
   </form>
 </div>
+	<style>
+		body{
+			background: #cddad7;
+		}
+	</style>
 {% endblock %}
 
 {#{% extends 'assets/static/base.html' %}#}
