--- a/templates/assets/static/carro/modelo/add_modelo.html
+++ b/templates/assets/static/carro/modelo/add_modelo.html
@@ -1,67 +1,87 @@
 {% extends 'assets/static/base.html' %}
 {% load bootstrap5 %}
+
 {% block content %}
 <div class="container py-5">
-    <div class="row justify-content-center">
+    <h2>Gerenciar Modelos</h2>
+    <ul class="nav nav-tabs mt-4" id="myTab" role="tablist">
+        <li class="nav-item" role="presentation">
+            <a class="nav-link active" id="add-modelo-tab" data-toggle="tab" href="#add-modelo" role="tab" aria-controls="add-modelo" aria-selected="true">Adicionar Modelo</a>
+        </li>
+        <li class="nav-item" role="presentation">
+            <a class="nav-link" id="listar-modelos-tab" data-toggle="tab" href="#listar-modelos" role="tab" aria-controls="listar-modelos" aria-selected="false">Listar Modelos</a>
+        </li>
+    </ul>
 
-        <div class="col-xl-8 col-lg-10 col-md-12">
-            <div class="card o-hidden border-0 shadow-lg">
-                <div class="card-body p-0">
-                    <div class="row" style="justify-content: center">
-                        <div class="col-lg-6 d-none d-lg-block bg-login-image">
-	                        <div class="col-lg-6"></div>
-	                            <div class="p-5">
-	                                <div class="text-center">
-	                                    <h1 class="h4 text-gray-900 mb-4">Cadastrar Novo Modelo</h1>
-	                                </div>
-	                                <form enctype="multipart/form-data" class="user" method="POST">
-	                                    {% csrf_token %}
-	                                    {% bootstrap_form form %}
-	                                    <button class="btn btn-primary btn-user btn-block" type="submit">Cadastrar</button>
-	                                </form>
-	                            </div>
+    <div class="tab-content mt-4" id="myTabContent">
+        <!-- Adicionar Modelo -->
+        <div class="tab-pane fade show active" id="add-modelo" role="tabpanel" aria-labelledby="add-modelo-tab">
+            <div class="row justify-content-center">
+                <div class="col-md-6">
+                    <div class="card o-hidden border-0 shadow-lg">
+                        <div class="card-body p-5">
+                            <div class="text-center">
+                                <h1 class="h4 text-gray-900 mb-4">Cadastrar Novo Modelo</h1>
+                            </div>
+                            <form enctype="multipart/form-data" method="POST">
+                                {% csrf_token %}
+                                {% bootstrap_form form %}
+                                <button class="btn btn-primary btn-user btn-block mt-3" type="submit">Cadastrar</button>
+                            </form>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
 
-        <div class="col-xl-8 col-lg-10 col-md-12 mt-5">
-            <div class="card o-hidden border-0 shadow-lg">
-                <div class="card-body p-0">
-                    <div class="table-responsive">
-                        <h3 class="p-4">Lista de Modelos</h3>
-                        <table class="table table-bordered">
-                            <thead>
-                                <tr>
-                                    <th scope="col">ID</th>
-                                    <th scope="col">Descrição</th>
-                                    <th scope="col">Ações</th>
-                                </tr>
-                            </thead>
-                            <tbody>
-                                {% for modelo in modelos %}
-                                <tr>
-                                    <td>{{ modelo.id }}</td>
-                                    <td>{{ modelo.descricao }}</td>
-                                    <td>
-                                        <a href="{% url 'editar_modelo' modelo.id %}" class="btn btn-success btn-sm">Editar</a>
-                                        <a href="/remove/modelo/{{ modelo.id }}" class="btn btn-danger btn-sm">Remover</a>
-                                    </td>
-                                </tr>
-                                {% endfor %}
-                            </tbody>
-                        </table>
+        <!-- Listar Modelos -->
+        <div class="tab-pane fade" id="listar-modelos" role="tabpanel" aria-labelledby="listar-modelos-tab">
+            <div class="row justify-content-center mt-4">
+                <div class="col-md-8">
+                    <div class="card o-hidden border-0 shadow-lg">
+                        <div class="card-body p-0">
+                            <div class="table-responsive">
+                                <h3 class="p-4">Lista de Modelos</h3>
+                                <table class="table table-bordered">
+                                    <thead>
+                                        <tr>
+                                            <th scope="col">ID</th>
+                                            <th scope="col">Descrição</th>
+                                            <th scope="col">Marca</th>
+                                            <th scope="col">Ações</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        {% for modelo in modelos %}
+                                        <tr>
+                                            <td>{{ modelo.id }}</td>
+                                            <td>{{ modelo.descricao }}</td>
+                                            <td>{{ modelo.marca.descricao }}</td>
+                                            <td>
+                                                <a href="{% url 'editar_modelo' modelo.id %}" class="btn btn-success btn-sm">Editar</a>
+                                                <a href="/remove/modelo/{{ modelo.id }}" class="btn btn-danger btn-sm">Remover</a>
+                                            </td>
+                                        </tr>
+                                        {% endfor %}
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
+    </div>
 
-        <div class="col-12 mt-4 text-center">
+    <div class="row justify-content-center mt-4">
+        <div class="col-md-6">
             <a class="btn btn-secondary" href="{% url 'home' %}">Voltar</a>
         </div>
-
     </div>
 </div>
-
+	<style>
+		body{
+			background: #cddad7;
+		}
+	</style>
 {% endblock %}
