--- a/templates/assets/static/footer.html
+++ b/templates/assets/static/footer.html
@@ -1,5 +1,5 @@
-<footer class="footer bg-dark text-light">
-  <div class="container">
+<footer class="footer text-white bg-dark">
+  <div class="container py-5">
     <div class="row">
       <div class="col-md-6">
         <h5 class="mb-4">Informações de Contato</h5>
@@ -24,8 +24,32 @@
   </div>
 </footer>
 
-	<style>
-		.custom-footer{
-			margin-top: 60px; /* Ajuste o valor da margem conforme desejado */
-		}
-	</style>
+<style>
+  .footer {
+    background: #333;
+    padding-top: 40px;
+    padding-bottom: 20px;
+  }
+
+  .footer p {
+    font-size: 14px;
+    margin-bottom: 8px;
+  }
+
+  .footer h5 {
+    color: #fff;
+    font-size: 18px;
+    font-weight: 600;
+    margin-bottom: 15px;
+  }
+
+  .social-icons a {
+    color: #fff;
+    margin-right: 10px;
+    transition: color 0.3s ease;
+  }
+
+  .social-icons a:hover {
+    color: #007bff;
+  }
+</style>
