--- a/templates/assets/static/index.html
+++ b/templates/assets/static/index.html
@@ -2,7 +2,6 @@
 {% load static %}
 {% block content %}
 
-
 <!-- Banner -->
 <div class="jumbotron text-center">
   <h1 class="display-4">Alugue um Carro Agora!</h1>
@@ -14,16 +13,16 @@
 <section class="container py-5">
   <div class="row">
     <div class="col-md-4">
-      <h2>Carros de Qualidade</h2>
-      <p>Oferecemos uma frota diversificada de veículos de qualidade para você escolher. Desde carros compactos até SUVs luxuosos, temos tudo o que você precisa para tornar sua viagem especial.</p>
+      <h2 class="title-section">Carros de Qualidade</h2>
+      <p class="text-section">Oferecemos uma frota diversificada de veículos de qualidade para você escolher. Desde carros compactos até SUVs luxuosos, temos tudo o que você precisa para tornar sua viagem especial.</p>
     </div>
     <div class="col-md-4">
-      <h2>Reservas Fáceis</h2>
-      <p>Nosso processo de reserva é simples e conveniente. Basta selecionar o carro de sua escolha, fornecer algumas informações básicas e pronto! Você estará pronto para pegar seu carro em pouco tempo.</p>
+      <h2 class="title-section">Reservas Fáceis</h2>
+      <p class="text-section">Nosso processo de reserva é simples e conveniente. Basta selecionar o carro de sua escolha, fornecer algumas informações básicas e pronto! Você estará pronto para pegar seu carro em pouco tempo.</p>
     </div>
     <div class="col-md-4">
-      <h2>Atendimento ao Cliente</h2>
-      <p>Nossa equipe dedicada está pronta para ajudá-lo em todas as etapas do processo de locação. Se você tiver alguma dúvida ou precisar de assistência, não hesite em entrar em contato conosco.</p>
+      <h2 class="title-section">Atendimento ao Cliente</h2>
+      <p class="text-section">Nossa equipe dedicada está pronta para ajudá-lo em todas as etapas do processo de locação. Se você tiver alguma dúvida ou precisar de assistência, não hesite em entrar em contato conosco.</p>
     </div>
   </div>
 </section>
@@ -35,7 +34,7 @@
     <div class="row mt-4">
       <div class="col-md-10 offset-md-1">
         <div class="card-deck d-flex flex-wrap justify-content-center">
-          <div class="card">
+          <div class="card border">
             <i class="fa-solid fa-user icons"></i>
             <div class="card-body">
               <h5 class="card-title">Idade e Tempo de Carteira</h5>
@@ -43,7 +42,7 @@
             </div>
           </div>
           <div class="card">
-           <i class="fa-solid fa-address-card icons"></i>
+            <i class="fa-solid fa-address-card icons"></i>
             <div class="card-body">
               <h5 class="card-title">Documentos Originais</h5>
               <p class="card-text">É obrigatório apresentar documentos originais, como RG, CPF e comprovante de residência, no momento da locação.</p>
@@ -76,107 +75,141 @@
   </div>
 </section>
 
-    <!-- Adicione o campo de busca no topo da página -->
-<div class="container py-5">
-  <div class="row">
-    <div class="col-md-8 offset-md-2">
-      <form class="d-flex my-4" method="GET">
-        <input class="form-control form-control-lg mr-sm-2 flex-grow-1" type="search" name="search" placeholder="Modelo ou marca do carro" aria-label="Search">
-        <button class="btn btn-outline-primary" type="submit">Buscar</button>
-      </form>
+<section>
+  <div class="container py-5">
+    <div class="row">
+      <div class="col-md-8 offset-md-2">
+        <form class="d-flex my-4" method="GET">
+          <input class="form-control form-control-lg mr-sm-2 flex-grow-1 busca" type="search" name="search" placeholder="Modelo ou marca do carro" aria-label="Search">
+          <button class="btn btn-primary" type="submit">Buscar</button>
+        </form>
+      </div>
     </div>
   </div>
-</div>
+</section>
 
 {% if carros %}
 <!-- Seção de destaques dos carros disponíveis -->
-<section class="bg-light py-5">
+<section class="bg-light py-5 mask">
 
   <div class="container text-center">
-    <h2 id="carros-disponiveis">Carros Disponíveis</h2>
+    <h2 id="carros-disponiveis" class="cars">Carros Disponíveis</h2>
 
-	<div class="row mt-4">
-	    {% for carro in carros %}
-		    {% if carro.disponivel == True %}
-		      <div class="col-md-4">
-		        <div class="card mb-4 box-shadow">
-			        {% if carro.imagem == "" or carro.imagem == null %}
-			            <img class="card-img-top" src="{% static 'imagens/error.png' %}" alt="Carro 1">
-			        {% else %}
-		                <img class="card-img-top" src="{{ carro.imagem.url }}" alt="Carro 1">
-			        {% endif %}
-		          <div class="card-body">
-		            <h5 class="card-title">{{ carro.modelo.marca.descricao }} - {{ carro.modelo.descricao }} <strong class="valor-locacao">R$ {{ carro.valor_locacao }}/Dia</strong></h5>
-		            <p class="card-text">{{ carro.descricao }}</p>
-		            <a href="{% url 'detalhes_automovel' carro.id %}" class="btn btn-primary">Detalhes</a>
-		          </div>
-		        </div>
-		      </div>
-		    {% endif %}
-	    {% endfor %}
-	    </div>
+    <div class="row mt-4">
+      {% for carro in carros %}
+        {% if carro.disponivel == True %}
+          <div class="col-md-4">
+            <div class="card mb-4 box-shadow">
+              {% if carro.imagem %}
+                <img class="card-img-top" src="{{ carro.imagem.url }}" alt="Imagem do automóvel">
+              {% else %}
+                <img class="card-img-top" src="{% static 'imagens/error.png' %}" alt="Imagem indisponível">
+              {% endif %}
+              <div class="card-body">
+                <h5 class="card-title">{{ carro.modelo.marca.descricao }} - {{ carro.modelo.descricao }}</h5>
+                <p class="card-text">{{ carro.descricao }}</p>
+                <strong class="valor-locacao">R$ {{ carro.valor_locacao }}/Dia</strong>
+                <a href="{% url 'detalhes_automovel' carro.id %}" class="btn btn-primary">Detalhes</a>
+              </div>
+            </div>
+          </div>
+        {% endif %}
+      {% endfor %}
+    </div>
   </div>
 </section>
-	<br>
-	<br>
+
+<!-- Seção de carros alugados no momento -->
 <section class="bg-light py-5">
   <div class="container text-center">
-    <h2>Carros alugados no momento</h2>
-	    <div class="row mt-4">
-	    {% for carro in carros %}
-		    {% if carro.disponivel == False %}
-		      <div class="col-md-4">
-		        <div class="card mb-4 box-shadow">
-			        {% if carro.imagem == "" or carro.imagem == null %}
-			            <img class="card-img-top" src="{% static 'imagens/error.png' %}" alt="Carro 1">
-			        {% else %}
-		                <img class="card-img-top" src="{{ carro.imagem.url }}" alt="Carro 1">
-			        {% endif %}
-		          <div class="card-body">
-		            <h5 class="card-title">{{ carro.modelo.marca.descricao }} - {{ carro.modelo.descricao }} <strong class="valor-locacao">R$ {{ carro.valor_locacao }}/Dia</strong></h5>
-		            <p class="card-text">{{ carro.descricao }}</p>
-		            <a href="{% url 'detalhes_automovel' carro.id %}" class="btn btn-primary">Detalhes</a>
-		          </div>
-		        </div>
-		      </div>
-		    {% endif %}
-	    {% endfor %}
-	    </div>
+    <h2 class="cars">Carros Alugados no Momento</h2>
+    <div class="row mt-4">
+      {% for carro in carros %}
+        {% if not carro.disponivel %}
+          <div class="col-md-4">
+            <div class="card mb-4 box-shadow">
+              {% if carro.imagem %}
+                <img class="card-img-top" src="{{ carro.imagem.url }}" alt="Imagem do automóvel">
+              {% else %}
+                <img class="card-img-top" src="{% static 'imagens/error.png' %}" alt="Imagem indisponível">
+              {% endif %}
+              <div class="card-body">
+                <h5 class="card-title">{{ carro.modelo.marca.descricao }} - {{ carro.modelo.descricao }}</h5>
+                <p class="card-text">{{ carro.descricao }}</p>
+                <strong class="valor-locacao">R$ {{ carro.valor_locacao }}/Dia</strong>
+                <a href="{% url 'detalhes_automovel' carro.id %}" class="btn btn-primary">Detalhes</a>
+              </div>
+            </div>
+          </div>
+        {% endif %}
+      {% endfor %}
+    </div>
   </div>
 </section>
 {% endif %}
 
 <style>
-
-	.card{
-		justify-content: center;
-		align-items: center;
-	}
-	img{
-		max-width: 300px;
-		height: 200px;
-	}
-	.valor-locacao {
-	  background-color: #007bff;
-	  padding: 3px 3px;
-	  border-radius: 5px;
-	  font-size: 16px;
-	  color: white;
-	}
-  @media (max-width: 576px) {
-      .valor-locacao {
-          font-size: 3.5vw; /* Ajuste o valor para telas pequenas */
-      }
+  body {
+    background: #cddad7;
   }
 
-	.icons{
-		margin-top: 10px;
-		max-width: 100px;
-		height: 50px;
-		color: #007bff;
-	}
+  .box-shadow {
+    color: white;
+    background: #cddad7;
+    height: 500px;
+  }
 
+  .col-md-4 {
+    background: white;
+  }
 
+  .container {
+    background: white;
+  }
+
+  .card .card-img-top {
+    margin-top: 15px;
+    max-height: 300px;
+  }
+
+  img {
+    max-width: 300px;
+    height: 200px;
+  }
+
+  .busca {
+    border: 2px solid black;
+    border-radius: 5px;
+  }
+
+  .title-section {
+    color: #285a88;
+  }
+
+  .text-section {
+    color: #333;
+  }
+
+  .mask {
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+  }
+
+  .btn-primary {
+	margin-bottom: 20px;
+    background-color: #007bff;
+    border-color: #007bff;
+  }
+
+  .btn-primary:hover {
+    background-color: #0056b3;
+    border-color: #0056b3;
+  }
+  .cars{
+	  color: black;
+	  font-size: 2rem;
+	  font-weight: bolder;
+  }
 </style>
 
 {% endblock %}
