--- a/templates/assets/static/locacao/locacao.html
+++ b/templates/assets/static/locacao/locacao.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="container py-5">
-  <div id="intro" class="card p-5">
+  <div class="card p-5 shadow-lg">
     <h2 class="mb-4 text-center">Realizar Reserva do Carro</h2>
 
     <form method="post" class="mx-auto">
@@ -10,35 +10,38 @@
 
       <div class="form-group">
         <label for="{{ form.data_locacao.id_for_label }}">Data de Locação:</label>
-        <input type="date" name="{{ form.data_locacao.name }}" id="{{ form.data_locacao.id_for_label }}" class="form-control">
-        <input type="time" name="{{ form.hora_locacao.name }}" id="{{ form.hora_locacao.id_for_label }}" class="form-control mt-2">
+        <div class="input-group">
+          <input type="date" name="{{ form.data_locacao.name }}" id="{{ form.data_locacao.id_for_label }}" class="form-control">
+          <input type="time" name="{{ form.hora_locacao.name }}" id="{{ form.hora_locacao.id_for_label }}" class="form-control">
+        </div>
       </div>
 
       <div class="form-group">
         <label for="{{ form.data_devolucao.id_for_label }}">Data de Devolução:</label>
-        <input type="date" name="{{ form.data_devolucao.name }}" id="{{ form.data_devolucao.id_for_label }}" class="form-control">
-        <input type="time" name="{{ form.hora_devolucao.name }}" id="{{ form.hora_devolucao.id_for_label }}" class="form-control mt-2">
+        <div class="input-group">
+          <input type="date" name="{{ form.data_devolucao.name }}" id="{{ form.data_devolucao.id_for_label }}" class="form-control">
+          <input type="time" name="{{ form.hora_devolucao.name }}" id="{{ form.hora_devolucao.id_for_label }}" class="form-control">
+        </div>
       </div>
-		<div>
-			<p>O limite padrão de KM diários é de 100KM/dia.</p>
-		</div>
-	    <br>
-	    <br>
-      <button type="submit" class="btn btn-primary">Realizar Reserva</button>
-      <a href="{% url 'home' %}" class="btn btn-secondary">Cancelar</a>
+
+      <div class="d-flex justify-content-center">
+        <button type="submit" class="btn btn-primary mr-3">Realizar Reserva</button>
+        <a href="{% url 'home' %}" class="btn btn-secondary">Cancelar</a>
+      </div>
     </form>
+	  <div class="alert alert-info" role="alert">
+        Você terá um limite de 100KM/dia. Caso ultrapasse, receberá multa de 15% a cada 100km.
+      </div>
   </div>
 </div>
-	<style>
-		#intro {
-			height: 100vh;
-		}
 
-		      /* Height for devices larger than 576px */
-		@media (min-width: 992px) {
-			#intro {
-				margin-top: 20px;
-			}
+	<style>
+		.alert{
+			margin-top: 20px;
+		}
+		body{
+			background: #cddad7;
 		}
 	</style>
+
 {% endblock %}
