Finalizando Back-End do projeto

--- a/templates/assets/static/locacao/crud/lista_reservas_admin.html
+++ b/templates/assets/static/locacao/crud/lista_reservas_admin.html
@@ -13,7 +13,7 @@
   <!-- Formulário de busca -->
   <form method="get" class="form-inline justify-content-center mt-4">
     <div class="form-group col-md-8 offset-md-2">
-      <input type="text" name="search" class="form-control form-control-lg mr-sm-2 flex-grow-1" placeholder="Cliente ou Chassi">
+      <input type="text" name="search" class="form-control form-control-lg mr-sm-2 flex-grow-1" placeholder="Pesquise por Cliente ou Chassi">
     </div>
     <button type="submit" class="btn btn-primary ml-2">Buscar</button>
   </form>
@@ -36,16 +36,16 @@
 
 <style>
 	.list-group-item{
-		background: #32373b;
+		{#background: #32373b;#}
 	}
 	#edit{
-		color: white;
+		color: black;
 		font-size: 20px;
 		text-decoration: none;
 	}
 	#edit:hover{
 		transition: 0.2s;
-		color: #e8dede;
+		color: blue;
 	}
 
 	.message {
