--- a/templates/assets/static/locacao/fazer_reserva.html
+++ b/templates/assets/static/locacao/fazer_reserva.html
@@ -30,7 +30,7 @@
       </div>
     </form>
 	  <div class="alert alert-info" role="alert">
-        Você terá um limite de 100KM/dia. Caso ultrapasse, receberá multa de 15% a cada 100km.
+        Você terá um limite de 100KM/dia. Caso ultrapasse, receberá multa de 15% a cada km rodado.
       </div>
   </div>
 </div>
