--- a/accounts/templates/registration/login.html
+++ b/accounts/templates/registration/login.html
@@ -9,7 +9,7 @@
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-xl-5 col-md-8">
-          <form class="bg-white rounded shadow-5-strong p-5" method="post">
+          <form class="bg-white rounded shadow-5-strong p-5" method="POST">
             <h4 class="text-center mb-4">Login</h4>
             {% if messages %}
               <ul class="messages text-black">
