--- a/templates/assets/static/carro/remove.html
+++ b/templates/assets/static/carro/remove.html
@@ -1,7 +1,7 @@
 {% extends 'assets/static/base.html' %}
 {% block content %}
 
-<div class="container py-5 mt-4">
+<div class="container py-5 mt-4" id="intro">
   <div class="card p-5">
     <h3 class="mb-4">Remover Carro: {{carro.modelo.marca.descricao}} {{ carro.modelo.descricao }}</h3>
     <h3 class="mb-4">Tem certeza que deseja deletar este Carro?</h3>
@@ -11,5 +11,59 @@
     </div>
   </div>
 </div>
+
+<style>
+  body {
+    background: #cddad7;
+  }
+
+  .container {
+    max-width: 600px;
+  }
+
+  .card {
+    background-color: #fff;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 10px;
+    padding: 20px;
+  }
+
+  h3 {
+    color: #333;
+    font-size: 24px;
+    font-weight: bold;
+  }
+
+  .btn {
+    font-size: 16px;
+    font-weight: bold;
+    padding: 10px 20px;
+    border-radius: 5px;
+  }
+
+  .btn-danger {
+    background-color: #dc3545;
+    border-color: #dc3545;
+  }
+
+  .btn-primary {
+    background-color: #007bff;
+    border-color: #007bff;
+  }
+
+  .btn-danger:hover,
+  .btn-primary:hover {
+    opacity: 0.9;
+  }
+
+  .d-flex {
+    display: flex;
+  }
+
+  .justify-content-between {
+    justify-content: space-between;
+  }
+
+</style>
 
 {% endblock %}
