--- a/templates/assets/static/navbar.html
+++ b/templates/assets/static/navbar.html
@@ -18,7 +18,7 @@
         <a class="nav-link" href="{% url 'home' %}">Home <span class="sr-only">(current)</span></a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Sobre</a>
+        <a class="nav-link" href="{% url 'sobre' %}">Sobre</a>
       </li>
     </ul>
 
@@ -33,6 +33,9 @@
           <li><a class="dropdown-item" href="{% url 'add_marca' %}">Adicionar Marca</a></li>
           <li><a class="dropdown-item" href="{% url 'add_modelo' %}">Adicionar Modelo</a></li>
 {#	      <li><a class="dropdown-item" href="{% url 'logout' %}">Sair</a></li>#}
+	{% else %}
+	      <li><a class="dropdown-item" href="{% url 'logi' %}">Login</a></li>
+
         </ul>
       </li>
     </ul>
