--- a/templates/assets/error/401.html
+++ b/templates/assets/error/401.html
@@ -1,4 +1,4 @@
-{% extends 'assets/static/base.html' %}
+{% extends 'assets/base.html' %}
 {% block content%}
 
 <title>404 Error - SB Admin</title>
