--- a/templates/assets/sobre.html
+++ b/templates/assets/sobre.html
@@ -1,4 +1,4 @@
-{% extends 'assets/static/base.html' %}
+{% extends 'assets/base.html' %}
 {% block content %}
 
 <div id="intro" class="container py-5">
