--- a/templates/assets/base.html
+++ b/templates/assets/base.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 
-	{% include 'assets/static/navbar.html' %}
+	{% include 'assets/navbar.html' %}
 
 	<div class="container">
 		{% block content %}{% endblock %}
@@ -43,7 +43,7 @@
 
 	{% block scripts %}{% endblock scripts %}
 
-{% include 'assets/static/footer.html' %}
+{% include 'assets/footer.html' %}
 
 </body>
 </html>
