--- a/templates/assets/carro/editar.html
+++ b/templates/assets/carro/editar.html
@@ -1,4 +1,4 @@
-{% extends 'assets/static/base.html' %}
+{% extends 'assets/base.html' %}
 {% block content %}
 {% load bootstrap5 %}
 <div class="container py-5">
