--- a/templates/assets/navbar.html
+++ b/templates/assets/navbar.html
@@ -1,3 +1,5 @@
+{#{% load custom_filters %}#}
+
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="{% url 'home' %}">RentCars</a>
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -7,6 +9,9 @@
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav ml-auto">
       {% if user.is_authenticated %}
+	  <li class="nav-item">
+        <a class="nav-link" href="{% url 'listar_carros_admin' %}">Alocação de Carros</a>
+      </li>
       <li class="nav-item">
         <a class="nav-link" href="{% url 'listar_reservas' %}">Minhas Reservas</a>
       </li>
@@ -29,7 +34,7 @@
         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
           <li><a class="dropdown-item" href="">{{ user.username }}</a></li>
           <li><hr class="dropdown-divider" /></li>
-{#	      {% if user.groups.filter(name='Vendedor').exists %}#}
+{#	      {% if user.is_authenticated and user|has_group:'Vendedor' %}#}
           <li><a class="dropdown-item" href="{% url 'add_carro' %}">Adicionar Automóvel</a></li>
           <li><a class="dropdown-item" href="{% url 'add_marca' %}">Adicionar Marca</a></li>
           <li><a class="dropdown-item" href="{% url 'add_modelo' %}">Adicionar Modelo</a></li>
